# cpp-practice

./: 15_function_pointers  CMakeLists.txt  README.md  main.c  main.cpp  string-streams.cpp
hackerrank/: 1_cpp_hello_world.cpp  2_cpp_input_and_output.cpp  3_c_tutorial_conditional_if_else.cpp  4_cpp_basic_data_types.cpp  5_c_tutorial_for_loop.cpp  6_c_tutorial_functions.cpp  7_c_tutorial_pointer.cpp  8_arrays_introduction.cpp  9_variable_sized_arrays.cpp
practice/: 10_structs_in_memory.c  11_boolean_in_c.c  13_pass_by_reference.c  15_function_pointers.c  16_c_string_length.c  17_c_strcpy.c  18_c_convert_int_to_string.c  19_c_struct_initializer_syntax.c  20_c_increment_semantics.c  7_switch_statement_refresher.cpp  8_implicit_type_conversion.c  9_heap_memory_layout.c  README.md  array_defaults.cpp  array_initialization.cpp  array_length.cpp  c-style-concat.cpp  c_style_concat.cpp  enums.cpp  non_infinite_loop.c
practice/12_flex/: lex.yy.c  test.yy
