cmake_minimum_required(VERSION 3.23)
project(cpp_practice)

set(CMAKE_CXX_STANDARD 23)


add_executable(cpp_practice other/1-c-style-concat.cpp other/0-string-streams.cpp old-cpp/4-conditional-statements.cpp old-cpp/1-say-hello-world-with-cpp.cpp old-cpp/2-input-and-output.cpp old-cpp/18-vector-sort.cpp old-cpp/9-variable-sized-arrays.cpp old-cpp/3-basic-data-types.cpp old-cpp/21-multi-level-inheritance.cpp old-cpp/15-inherited-code.cpp old-cpp/10-string-stream.cpp old-cpp/11-strings.cpp old-cpp/5-for-loop.cpp old-cpp/6-functions.cpp old-cpp/16-exceptional-server.cpp old-cpp/17-virtual-functions.cpp old-cpp/7-pointer.cpp old-cpp/13-class.cpp old-cpp/8-arrays-introduction.cpp old-cpp/19-vector-erase.cpp old-cpp/12-structs.cpp old-cpp/20-rectangle-area.cpp old-cpp/14-classes-and-objects.cpp)
